--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,15 +3,16 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
+    list-style: none;
 }
 
 @font-face {
-    font-family: 'MerriweatherSans';
-    src: url('../fonts/MerriweatherSans-VariableFont_wght.ttf');
+    font-family: 'MerriweatherSans-Light';
+    src: url('../fonts/MerriweatherSans-Light.ttf');
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Regular';
     src: url('../fonts/Montserrat-Regular.ttf');
 }
 
@@ -21,44 +22,48 @@
 }
 
 body {
-    font-family: 'MerriweatherSans';
+    font-family: 'MerriweatherSans-Light';
     background-color: white;
     overflow-x: hidden;
+    font-weight: lighter; 
 }
 
-ul {
-    display: inline-block;
-    position: relative;
+/* Header */
+header{
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .class_logo {
-    position: relative;
-    width: 230px;
+    width: 14.375rem;
 }
 
 nav.navegacion {
-    display: block;
-    /* display: flex; */
+    /* display: block; */
+    display: flex;
     width: 100%;
     height: 118px;
     background: #262626;
-    /* align-items: center; */
-    padding: 38px 0px;
+    align-items: center;
+    padding: 0 3.5rem;
+    justify-content: space-between;
 }
 
 .cont_logotipo {
-    display: inline-block;
-    position: relative;
-    margin: 0px 0px 0px 90px;
+    display: flex;
+    width: 14%;
+    align-items: center;
+    justify-content: start;
 }
 
 .cont_nav {
-    list-style: none;
-    /* width: 50%; */
-    width: 740px;
+    width: 42%;
     font-family: 'Vollkorn-Regular';
-    font-size: 24px;
-    margin: 0px 80px auto 160px;
+    font-size: 1.5rem;
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
 }
 
 ul li a {
@@ -66,22 +71,19 @@ ul li a {
 }
 
 .cont_nav .nav_item {
-    display: inline-block;
-    margin-left: 36px;
+    position: relative;
+    padding: 10px;
 }
 
 .cont_busqueda {
-    display: inline-block;
-    position: relative;
-    width: 360px;
-    height: 36px;
+    width: 18rem;
     background-color: #F1BF7B;
     border-radius: 50px;
     opacity: 10%;
 }
 
 #search_text {
-    display: inline-block;
+    /* display: inline-block; */
     width: 100%;
     height: 36px;
     padding: 10px;
@@ -90,15 +92,13 @@ ul li a {
 }
 
 .iconos_header {
-    display: inline-block;
-    position: relative;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .wh_iconos {
     width: 30px;
-    display: inline-block;
-    position: relative;
-    margin: 0px 10px;
+    margin: 0px 0px 0px 10px;
 }
 
 /* termina header */
@@ -128,49 +128,138 @@ ul li a {
 }
 
 .txt_enun {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Regular';
     font-size: 56px;
     color: #fbeed9;
     padding-bottom: 50px;
 }
 
 .txt_descripcion {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Regular';
     font-size: 30px;
     color: #fbeed9;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 /* BOTONES */
 
 .btn_desk {
-    width: 14.5rem;
-    height: 5rem;
-    border: 1px solid #fbeed9;
     display: flex;
+    width: 14rem;
+    height: 4.2rem;
+    border: 1px solid #fbeed9;
+    padding: 21px;
+    text-align: center;
+    border-radius: 40px;
     flex-direction: row;
+    justify-content: center;
 }
 
-.br_radius {
-    border-radius: 40px;
+.text_Desk{
+    color: #fbeed9;
+    font-size: 18px;
+    font-family: 'Montserrat-Regular';
+    font-weight: bold; 
 }
+
 
 .img_descarga {
-    width: 3rem;
-    height: 3rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: 8px;
 }
+
 
 /* termina main */
 
 
 /*  Footer */
-.pie_pag {
+
+footer{
     background-color: #262626;
+}
+.pie_pag {
     width: 100%;
-    height: 250px;
+    display: flex;
+    padding: 4rem 4.5%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 2%;
+}
+
+
+/* Contenido 1 pie pag */
+
+.cont1_pie{
+    margin-bottom: 1rem;
+    width: 28%;
 }
 
 .logo_footer {
     position: relative;
-    width: 180px;
+    width: 11.5rem;
+}
+
+.link_secc a ,.text_gen_pie{
+    padding: 10px 0;
+    color: #F1BF7B;
+    font-size: 1rem;  
+}
+
+.mg_btm_pie, h2{
+    margin-bottom: 2rem;
+}
+
+.pie_pag ul .link_secc a{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+/* Contenido 2 pie pag */
+
+.cont2_pie{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 58%;
+    gap: 2%;
+}
+
+.cont_pie_selec{
+    margin-bottom: 1rem;
+    width: 28%;
+}
+
+.pie_pag ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; 
+}
+
+.cont_pie_selec h2 {
+    font-family: 'Vollkorn-Regular';
+    color: #F1BF7B;
+    font-size: 1.4rem;
+    font-weight: normal;
+  }
+
+/* iconos */
+.icn{
+    width: 32px;
+    height: 32px;
+    margin-right: 5px;
+}
+
+.bi_mail{
+    background-image: url('../img/mail.svg');
+}
+.bi_wht{
+    background-image: url('../img/whatsapp.svg');
+}
+.bi_fb{
+    background-image: url('../img/facebook.svg');
+}
+.bi_ig{
+    background-image: url('../img/Instagram.svg');
 }
