--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,10 +62,10 @@ nav.navegacion {
     /* display: block; */
     display: flex;
     width: 100%;
-    height: 118px;
+    height: 96px;
     background: #262626;
     align-items: center;
-    padding: 0 3.5rem;
+    padding: 0 2.3rem 0 3rem;
     justify-content: space-between;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
 }
@@ -224,106 +224,6 @@ ul li a {
 /* Fin de main */
 
 
-/*  Footer */
-
-footer{
-    background-color: #262626;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-}
-
-.pie_pag {
-    width: 100vw;
-    display: flex;
-    padding: 4rem 3%;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    gap: 2%;
-}
-
-/* Contenido 1 pie pag */
-
-.cont1_pie{
-    margin-bottom: 1rem;
-    width: 28%;
-}
-
-.logo_footer {
-    position: relative;
-    width: 11.5rem;
-}
-
-.link_secc a ,.text_gen_pie{
-    padding: 10px 0;
-    color: #F1BF7B;
-    font-size: 1rem;  
-}
-
-.mg_btm_pie, h2{
-    margin-bottom: 2rem;
-}
-
-.pie_pag ul .link_secc a{
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-/* Contenido 2 pie pag */
-
-.cont2_pie{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 58%;
-    gap: 2%;
-}
-
-.cont2_pie #cont_pie_nosotros{
-    width: 17%;
-}
-
-.cont_pie_selec{
-    margin-bottom: 1rem;
-    width: 28%;
-}
-
-.pie_pag ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding-left: 0;
-}
-
-.cont_pie_selec h2{
-    font-family: 'Vollkorn-Regular';
-    color: #F1BF7B;
-    font-size: 1.3rem;
-    font-weight: normal;
-  }
-
-/* iconos */
-.icn{
-    width: 32px;
-    height: 32px;
-    margin-right: 5px;
-    background-repeat: no-repeat;
-    flex: none;
-}
-
-.bi_mail{
-    background-image: url('../img/mail.svg');
-}
-.bi_wht{
-    background-image: url('../img/whatsapp.svg');
-}
-.bi_fb{
-    background-image: url('../img/facebook.svg');
-}
-.bi_ig{
-    background-image: url('../img/Instagram.svg');
-}
-
-
 /* Pag Nosotros */
 #nosotros h2 {
     font-family: 'Vollkorn-Regular';
@@ -416,23 +316,116 @@ footer{
 .card_2 img{
     background-size: cover;
 }
+/* Fin de pag Nosotros */
+
+
+/*  Footer */
+
+footer{
+    background-color: #262626;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+}
+
+.pie_pag {
+    width: 100vw;
+    padding: 4rem 3%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 2%;
+}
+
+/* Contenido 1 pie pag */
+
+.cont1_pie{
+    margin-bottom: 1rem;
+    width: 28%;
+}
+
+.logo_footer {
+    position: relative;
+    width: 11.5rem;
+}
+
+.link_secc a ,.text_gen_pie{
+    padding: 10px 0;
+    color: #F1BF7B;
+    font-size: 1rem;  
+}
+
+.mg_btm_pie, h2{
+    margin-bottom: 2rem;
+}
+
+.pie_pag ul .link_secc a{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+/* Contenido 2 pie pag */
+
+.cont2_pie{
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 58%;
+    gap: 2%;
+}
+:is(.pie_pag,.cont2_pie, .pie_pag ul,){
+    display: flex;
+}
+.cont2_pie #cont_pie_nosotros{
+    width: 17%;
+}
+
+.cont_pie_selec{
+    margin-bottom: 1rem;
+    width: 28%;
+}
+
+.pie_pag ul{
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 0;
+}
+
+.cont_pie_selec h2{
+    font-family: 'Vollkorn-Regular';
+    color: #F1BF7B;
+    font-size: 1.3rem;
+    font-weight: normal;
+  }
+
+/* iconos */
+.icn{
+    width: 32px;
+    height: 32px;
+    margin-right: 5px;
+    background-repeat: no-repeat;
+    flex: none;
+}
+
+.bi_mail{
+    background-image: url('../img/mail.svg');
+}
+.bi_wht{
+    background-image: url('../img/whatsapp.svg');
+}
+.bi_fb{
+    background-image: url('../img/facebook.svg');
+}
+.bi_ig{
+    background-image: url('../img/Instagram.svg');
+}
+/* Fin de footer */
 
 
 /* Media queries */
 
-@media (max-width:1320px){
-    #img_principal{
-        height: 55rem;
-        background-size: cover;
-    }
-}
-
-@media (max-width:1360px){
-    .iconos_header, .cont_nav{
-        display: none;
-    }
-    .navegacion label{
-        display: block;
+/* media Q menu mobile  */
+@media (max-width:1360px) and (min-width:360px){
+    .navegacion{
+        height: 5.375rem;
+        padding: 0 2rem 0 2.8rem;
     }
 }
 
@@ -446,6 +439,42 @@ footer{
 @media (max-width:800px){
     .cont_nav{
         width: 70%;
+    }
+}
+
+@media (max-width:1360px){
+    .iconos_header, .cont_nav{
+        display: none;
+    }
+    .navegacion label{
+        display: block;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: .5rem;
+
+    }
+    #check_menu:checked~.cont_nav{
+        display: flex;
+        background: #262626;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        left: 0;
+        top: 96px;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        padding: 2rem 3rem;
+    }
+}
+
+
+
+@media (max-width:1320px){
+    #img_principal{
+        height: 55rem;
+        background-size: cover;
     }
 }
 
@@ -512,3 +541,6 @@ footer{
         width: 100%;
     }
 }
+
+
+
