--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,6 +34,13 @@ body {
     font-weight: lighter; 
 }
 
+h1{
+    font-family: 'Montserrat-Regular';
+    font-size: 3.4rem;
+    color: #FBEED9;
+    margin-bottom: 0;
+}
+
 /* Menu mobile */
 
 .fa-solid{
@@ -45,6 +52,11 @@ body {
     display: none;
 }
 
+/* Fin menu mobile */
+
+.dp_block{
+    display: block;
+}
 
 /* Header */
 header{
@@ -102,18 +114,20 @@ ul li a {
 
 .cont_busqueda {
     width: 16rem;
-    background-color: #F1BF7B;
-    border-radius: 50px;
-    opacity: 10%;
+}
+
+#search_text input{
+    box-shadow: none;
 }
 
 #search_text {
-    /* display: inline-block; */
     width: 100%;
     height: 36px;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 16px;
+    padding: 8px;
+    border-radius: 15px;
+    font-size: .9rem;
+    background-color: #FBEED9;
+    box-shadow: none;
 }
 
 .iconos_header {
@@ -175,20 +189,28 @@ ul li a {
     padding-bottom: 36px;
 }
 
-/* Color secundario */
-.c_s1{
-    color: #fbeed9;
+/* Color primario */
+.c_primary{
+    color: #F1BF7B;
 }
 
-.txt_enun {
-    font-family: 'Montserrat-Regular';
-    font-size: 3.5rem;
-    margin-bottom: 0;
+/* Color secundario */
+.c_s1{
+    color: #FBEED9;
+}
+.c_s2{
+    color: #86A2BB;
 }
 
 .txt_descripcion {
     font-family: 'Montserrat-Regular';
     font-size: 1.875rem;
+    margin-bottom: 0;
+}
+
+.txt_descripcion_2 {
+    font-family: 'Montserrat-Regular';
+    font-size: 1rem;
     margin-bottom: 0;
 }
 
@@ -319,16 +341,17 @@ ul li a {
 }
 /* Fin de pag Nosotros */
 
+
 /* Pag Contactanos */
 
-.c_primary{
-    color: #F1BF7B;
+.content_contactanos{
+    padding: 2rem 1.5rem 2rem 1.5rem;
 }
 
 #contactanos input,
 #contactanos textarea{
-    color: #FBEED9;
-    /* background-color: #262626; */
+    color: #262626;
+    background-color: #FBEED9;
     border: 1px solid #F1BF7B;
     box-shadow: none;
     font-weight: inherit;
@@ -337,6 +360,13 @@ ul li a {
 textarea{
     resize: none;
 }
+
+fieldset {
+    min-width: 0;
+    padding: 0;
+    margin: 0;
+    border: 1;
+  }
 
 /* Fin de pag Contactanos */
 
@@ -377,7 +407,8 @@ footer{
     margin-bottom: 2rem;
 }
 
-.pie_pag ul .link_secc a{
+.pie_pag ul .link_secc a,
+.content_contactanos ul .link_secc a{
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -399,7 +430,7 @@ footer{
 }
 
 .cont_pie_selec{
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     width: 28%;
 }
 
