--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,598 +1,3 @@
-/* Reset */
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    list-style: none;
-}
 
-@font-face {
-    font-family: 'MerriweatherSans-Light';
-    src: url('../fonts/MerriweatherSans-Light.ttf');
-}
 
-@font-face {
-    font-family: 'Montserrat-Regular';
-    src: url('../fonts/Montserrat-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'Vollkorn-Regular';
-    src: url('../fonts/Vollkorn-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'Vollkorn-Italic';
-    src: url('../fonts/Vollkorn-Italic.ttf');
-}
-
-body {
-    font-family: 'MerriweatherSans-Light';
-    background-color: #262626;
-    overflow-x: hidden;
-    font-weight: lighter; 
-}
-
-h1{
-    font-family: 'Montserrat-Regular';
-    font-size: 3.4rem;
-    color: #FBEED9;
-    margin-bottom: 0;
-}
-
-/* Menu mobile */
-
-.fa-solid{
-    color: #F1BF7B;
-    font-size: 2rem;
-}
-
-#check_menu, .navegacion label{
-    display: none;
-}
-
-/* Fin menu mobile */
-
-.dp_block{
-    display: block;
-}
-
-/* Header */
-header{
-    position: sticky;
-    top: 0;
-    z-index: 10;
-}
-
-.class_logo {
-    width: 14.375rem;
-    min-width: 11.5625rem; /*12.4375rem */
-}
-
-nav.navegacion {
-    /* display: block; */
-    display: flex;
-    width: 100%;
-    height: 96px;
-    background: #262626;
-    align-items: center;
-    padding: 0 2.3rem 0 3rem;
-    justify-content: space-between;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-}
-
-.cont_logotipo {
-    display: flex;
-    width: 13%;
-    align-items: center;
-    justify-content: start;
-}
-
-.cont_nav {
-    width: 42%;
-    font-family: 'Vollkorn-Regular';
-    font-size: 1.3em;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
-}
-
-#menu{
-    margin: 0 auto;
-}
-
-ul li a {
-    color: #F1BF7B;
-    text-decoration: none;
-}
-
-.cont_nav .nav_item {
-    position: relative;
-    padding: 10px;
-}
-
-.cont_busqueda {
-    width: 16rem;
-}
-
-#search_text input{
-    box-shadow: none;
-}
-
-#search_text {
-    width: 100%;
-    height: 36px;
-    padding: 8px;
-    border-radius: 15px;
-    font-size: .9rem;
-    background-color: #FBEED9;
-    box-shadow: none;
-}
-
-.iconos_header {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.wh_iconos {
-    width: 30px;
-    margin: 0px 0px 0px 10px;
-}
-
-/* Fin de header */
-
-/* Main */
-.cont_general {
-    position: relative;
-}
-
-#img_principal {
-    position: relative;
-    width: 100vw;
-    height: 78rem;
-    background-image: url(../img/portada.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    margin-bottom: 2rem;
-}
-
-#img_principal::after {
-    content: '';
-    background: #262626;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: .5;
-}
-
-#txt_enunciado{
-    z-index: 1;
-}
-
-.ps_absolute {
-    position: absolute;
-}
-
-.ps_left {
-    left: 80px;
-}
-
-.ps_top {
-    top: 380px;
-}
-
-.pdd_top{
-    padding-bottom: 36px;
-}
-
-/* Color primario */
-.c_primary{
-    color: #F1BF7B;
-}
-
-/* Color secundario */
-.c_s1{
-    color: #FBEED9;
-}
-.c_s2{
-    color: #86A2BB;
-}
-
-.txt_descripcion {
-    font-family: 'Montserrat-Regular';
-    font-size: 1.875rem;
-    margin-bottom: 0;
-}
-
-.txt_descripcion_2 {
-    font-family: 'Montserrat-Regular';
-    font-size: 1rem;
-    margin-bottom: 0;
-}
-
-/* BOTONES */
-
-.btn_desk {
-    display: flex;
-    width: 14rem;
-    height: 4.2rem;
-    border: 1px solid #fbeed9;
-    padding: 21px;
-    text-align: center;
-    border-radius: 40px;
-    flex-direction: row;
-    justify-content: center;
-    text-decoration: none;
-}
-
-.text_Desk{
-    color: #fbeed9;
-    font-size: 18px;
-    font-family: 'Montserrat-Regular';
-    font-weight: bold; 
-}
-
-
-.img_descarga {
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-left: 8px;
-}
-
-/* Fin de main */
-
-
-/* Pag Nosotros */
-#nosotros h2, #contactanos h2 {
-    font-family: 'Vollkorn-Regular';
-    font-size: 2.2rem;
-    text-align: center;
-    color: #F1BF7B;
-    margin-top: 5rem;
-}
-
-.cont_gen_nos{
-    width: 100%;
-    padding: 2.5rem 3%;
-    min-width: 360px;
-}
-/* background-color: #86A2BB; */
-
-/* Aplicando Grid */
-.cont_nosotros{
-    width: 100%;
-    height: 100%;
-    padding: 1rem 22%;
-    /* Agregando grillas */
-    display: grid;
-    gap: 0;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "card_1 card_2";
-}
-
-@media ( width < 1020px ) {
-    .cont_nosotros {
-        padding: 1rem 7rem;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "card_1"
-        "card_2"
-    }
-}
-
-@media ( width < 800px ) {
-    .cont_nosotros {
-        padding: 1rem 7rem;
-        font-size: 0.875rem;
-    }
-}
-
-@media ( width < 600px ) {
-    .cont_nosotros {
-        padding: 1rem 3rem;
-        font-size: 0.875rem;
-    }
-}
-
-.card_nos{
-    height: 500px;
-    background-color: #f2f2f2;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-}
-
-.card_1{
-    background-image: url('/img/pres_1a.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 100%;
-    object-fit: cover;
-    grid-area: card_1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.card_1 p{
-    padding: 30px;
-    margin: 0 auto;
-}
-
-.card_nos p span{
-    display: block;
-    padding-top: 10px;
-}
-
-.card_img1{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.card_2{
-    grid-area: card_2;
-}
-
-.card_2 img{
-    background-size: cover;
-}
-/* Fin de pag Nosotros */
-
-
-/* Pag Contactanos */
-
-.content_contactanos{
-    padding: 2rem 1.5rem 2rem 1.5rem;
-}
-
-#contactanos input,
-#contactanos textarea{
-    color: #262626;
-    background-color: #FBEED9;
-    border: 1px solid #F1BF7B;
-    box-shadow: none;
-    font-weight: inherit;
-}
-
-textarea{
-    resize: none;
-}
-
-fieldset {
-    min-width: 0;
-    padding: 0;
-    margin: 0;
-    border: 1;
-  }
-
-/* Fin de pag Contactanos */
-
-/*  Footer */
-
-footer{
-    background-color: #262626;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-}
-
-.pie_pag {
-    width: 100vw;
-    padding: 4rem 3%;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    gap: 2%;
-}
-
-/* Contenido 1 pie pag */
-
-.cont1_pie{
-    margin-bottom: 1rem;
-    width: 28%;
-}
-
-.logo_footer {
-    position: relative;
-    width: 11.5rem;
-}
-
-.link_secc a ,.text_gen_pie{
-    padding: 10px 0;
-    color: #F1BF7B;
-    font-size: 1rem;  
-}
-
-.mg_btm_pie, h2{
-    margin-bottom: 2rem;
-}
-
-.pie_pag ul .link_secc a,
-.content_contactanos ul .link_secc a{
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-/* Contenido 2 pie pag */
-
-.cont2_pie{
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 58%;
-    gap: 2%;
-}
-:is(.pie_pag,.cont2_pie, .pie_pag ul,){
-    display: flex;
-}
-.cont2_pie #cont_pie_nosotros{
-    width: 17%;
-}
-
-.cont_pie_selec{
-    margin-bottom: 2rem;
-    width: 28%;
-}
-
-.pie_pag ul{
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding-left: 0;
-}
-
-.cont_pie_selec h2{
-    font-family: 'Vollkorn-Regular';
-    color: #F1BF7B;
-    font-size: 1.3rem;
-    font-weight: normal;
-  }
-
-/* iconos */
-.icn{
-    width: 32px;
-    height: 32px;
-    margin-right: 5px;
-    background-repeat: no-repeat;
-    flex: none;
-}
-
-.bi_mail{
-    background-image: url('../img/mail.svg');
-}
-.bi_wht{
-    background-image: url('../img/whatsapp.svg');
-}
-.bi_fb{
-    background-image: url('../img/facebook.svg');
-}
-.bi_ig{
-    background-image: url('../img/Instagram.svg');
-}
-/* Fin de footer */
-
-
-/* Media queries */
-
-/* media Q menu mobile  */
-@media (max-width:1360px) and (min-width:360px){
-    .navegacion{
-        height: 5.375rem;
-        padding: 0 2rem 0 2.8rem;
-    }
-}
-
-@media (max-width:1266px) and (min-width:360px){
-    .class_logo{
-        width: 11.5625rem;
-        object-fit: cover;
-    }
-}
-
-@media (max-width:800px){
-    .cont_nav{
-        width: 70%;
-    }
-}
-
-@media (max-width:1360px){
-    .iconos_header, .cont_nav{
-        display: none;
-    }
-    .navegacion label{
-        display: block;
-        width: 3rem;
-        height: 3rem;
-        text-align: center;
-        padding: .5rem;
-
-    }
-    #check_menu:checked~.cont_nav{
-        display: flex;
-        background: #262626;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        left: 0;
-        top: 96px;
-        flex-direction: column;
-        justify-content: start;
-        align-items: start;
-        padding: 2rem 3rem;
-    }
-}
-
-
-
-@media (max-width:1320px){
-    #img_principal{
-        height: 55rem;
-        background-size: cover;
-    }
-}
-
-@media (max-width:800px){ 
-    #txt_enunciado{
-        top: 444px;
-        left: 55px;
-        margin-right: 50px;
-    }
-    .txt_enun{
-        font-size: 2.5rem;
-    }
-    .txt_descripcion{
-        font-size: 1.5rem;
-    }
-}
-
-@media (max-width:1360px){
-    #img_principal{
-        background-position-x: center;
-        background-position-y: 0rem;
-    }
-}
-
-@media (max-width:1660px){
-    .pie_pag{
-        padding: 4rem 4%;
-    }
-}
-
-@media (max-width:1320px){
-    .pie_pag{
-        padding: 4rem 8%;
-    }
-    .cont1_pie{
-        order: 2;
-        width: 100%;
-    }
-    .cont2_pie{
-        order: 1;
-        width: 100%;
-    }
-}
-
-@media (max-width:400px){
-    .pie_pag{
-        padding: 3rem 15%;
-    }
-}
-
-@media (max-width:768px) and (min-width:360px){
-    .cont1_pie{
-        width: 100%;
-        order: 2;
-        margin-top: 2rem;
-    }
-}
-
-@media (max-width:768px) and (min-width:360px){
-    .cont2_pie{
-        order: 1;
-    }
-    .cont2_pie, .cont2_pie #cont_pie_nosotros,.cont_pie_selec{
-        width: 100%;
-    }
-}
-
-
-
+/*# sourceMappingURL=estilos.css.map */
