--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,133 @@
+/* reset*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
 
+@font-face {
+  font-family: "MerriweatherSans-Light";
+  src: url("../fonts/MerriweatherSans-Light.ttf");
+}
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("../fonts/Montserrat-Regular.ttf");
+}
+@font-face {
+  font-family: "Vollkorn-Regular";
+  src: url("../fonts/Vollkorn-Regular.ttf");
+}
+@font-face {
+  font-family: "Vollkorn-Italic";
+  src: url("../fonts/Vollkorn-Italic.ttf");
+}
+body {
+  width: 100%;
+  height: 100v;
+  font-family: "MerriweatherSans-Light";
+  background-color: #262626;
+  overflow-x: hidden;
+  font-weight: lighter;
+}
+
+h1 {
+  font-family: "Montserrat-Regular";
+  font-size: 3.4rem;
+  color: #FBEED9;
+  margin-bottom: 0;
+}
+
+/* Menu mobile */
+.fa-solid {
+  color: #F1BF7B;
+  font-size: 2rem;
+}
+
+#check_menu, .navegacion label {
+  display: none;
+}
+
+/* Fin menu mobile */
+/* Header */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+.navegacion {
+  display: flex;
+  width: 100%;
+  height: 96px;
+  background: #262626;
+  align-items: center;
+  padding: 0 2.3rem 0 3rem;
+  justify-content: space-between;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
+}
+.navegacion .cont_logotipo {
+  display: flex;
+  width: 13%;
+  align-items: center;
+  justify-content: start;
+}
+.navegacion .cont_logotipo .class_logo {
+  width: 14.375rem;
+  min-width: 11.5625rem;
+}
+.navegacion .cont_nav {
+  width: 42%;
+  font-family: "Vollkorn-Regular";
+  font-size: 1.3rem;
+  margin: 0 auto;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+}
+.navegacion .cont_nav .nav_item {
+  position: relative;
+  padding: 10px;
+}
+.navegacion .cont_nav .nav_item a {
+  color: #F1BF7B;
+  text-decoration: none;
+}
+.navegacion .cont_nav .nav_item a:hover {
+  color: #FBEED9;
+}
+.navegacion .iconos_header {
+  display: flex;
+  justify-content: flex-end;
+}
+.navegacion .iconos_header .wh_iconos {
+  width: 30px;
+  margin: 0px 0px 0px 10px;
+}
+.navegacion .cont_busqueda {
+  width: 16rem;
+}
+.navegacion #search_text {
+  width: 100%;
+  height: 36px;
+  padding: 8px;
+  border-radius: 15px;
+  font-size: 0.9rem;
+  background-color: #FBEED9;
+  box-shadow: none;
+}
+
+.active {
+  color: #FBEED9;
+}
+
+@media (width < 1020px) {
+  .cont_nosotros {
+    padding: 1rem 7rem;
+    grid-template-columns: 1fr;
+    grid-template-areas: "card_1" "card_2";
+  }
+}
 
 /*# sourceMappingURL=estilos.css.map */
